refactored and updated docs
